--- a/docs/GDPs/gdp-0002.rst
+++ b/docs/GDPs/gdp-0002.rst
@@ -16,7 +16,7 @@ GT4Py treats the vertical domain specially so that top and bottom boundary condi
 It also has a limited ability to compute on sub-regions of the horizontal iteration space using the `domain` and `origin` keyword arguments to stencil calls, which offset and limit the compute region.
 However, this feature requires that separate stencils are written for boundaries, limiting the possibilities for backend optimization.
 
-Here we propose a mechanism to push the horizontal iteration bounds down to the level of the `with interval()` clause, as well as adding abstractions capable of running such stencils on domain-decomposed iterations spaces.
+Here we propose a mechanism to push the horizontal iteration bounds into the stencil, as well as adding abstractions capable of running such stencils on domain-decomposed iterations spaces.
 This additionally has the benefit of locating stencil-specific boundary calculation adjacent to the main stencil code, resulting in a friendlier interface and fewer opportunities for errors.
 
 Motivation and Scope
@@ -37,7 +37,7 @@ To illustrate the need for such a feature, consider a snippet of the model that 
             ub = dt5 * (uc[0, -1, 0] + uc - ​(vc[-1, 0, 0] + vc) * cosa) * rsina​
 
     @gtscript.stencil(backend=backend_type)​
-    def x_edge_ub(ut: FIELD_TYPE, ub: FIELD_TYPE, dt5: float)::
+    def x_edge_ub(ut: FIELD_TYPE, ub: FIELD_TYPE, dt5: float):
         with computation(PARALLEL), interval(...):​
             ub = dt5 * (ut[0, -1, 0] + ut)​
 
@@ -64,40 +64,35 @@ To illustrate the need for such a feature, consider a snippet of the model that 
 
 This example motivates a number of requirements for the feature. It must be able to
 
-1. specify regions in the context of a global iteration space (for global boundary conditions) using different `with` blocks inside a single stencil
+1. specify regions in the context of a global iteration space (for global boundary conditions) inside a single stencil
 2. specify cleanly regions at and near the edge of compute domains
 3. read from and write to fields inside halo regions
 
-The specific feature that we are proposing is the addition of a `region()` specifier that complements the `interval()`, but treats the horizontal instead of the vertical.
+The specific feature that we are proposing is the addition of a `region()` that specifies the horizontal iteration space.
 Arguments passed to the `region()` specifier are Python expressions resolved at compile time, which result in objects specifying the local index region for the contained computation.
 In order to make this friendlier for applications, they can provide methods or classes that provide these objects specifying the local index region.
 
-Using this concept, the example above is transformed into:
+Using this concept, the example is transformed into:
 
 .. code-block:: python
 
     @gtscript.stencil(backend=backend_type) # Single stencil
-    def ubke(uc: FIELD_TYPE, vc: FIELD_TYPE, cosa: FIELD_TYPE, rsina: FIELD_TYPE, ut: FIELD_TYPE, ub: FIELD_TYPE, dt5: float, dt4: float):
-        with computation(PARALLEL):
-            with interval(...): # applies to the compute domain as it does now
-                ub = dt5 * (uc[0, -1, 0] + uc - (vc[-1, 0, 0] + vc) * cosa) * rsina
-            with region((WestEdge(0, 1), EastEdge(0, 1)), interval(...):
-                # Executes on regions defined by the region objects
-                ub = dt5 * (ut[0, -1, 0] + ut)​
-            with region(SouthEdge(0, 1), NorthEdge(0, 1)), interval(...):
-                ub = dt4 * (-ut[0, -2, 0] + 3.0 * (ut[0, -1, 0] + ut) - ut[0, 1, 0])
+    def stencil(uc: FIELD_TYPE, vc: FIELD_TYPE, cosa: FIELD_TYPE, rsina: FIELD_TYPE, ut: FIELD_TYPE, ub: FIELD_TYPE, dt5: float, dt4: float):
+        with computation(PARALLEL), interval(...):
+            ub = dt5 * (uc[0, -1, 0] + uc - (vc[-1, 0, 0] + vc) * cosa) * rsina
+        with computation(PARALLEL), region(WestEdge(0, 1), EastEdge(0, 1)), interval(...):
+            ub = dt5 * (ut[0, -1, 0] + ut)
+        with computation(PARALLEL), region(SouthEdge(0, 1), NorthEdge(0, 1)), interval(...):
+            ub = dt4 * (-ut[0, -2, 0] + 3.0 * (ut[0, -1, 0] + ut) - ut[0, 1, 0])
 
-    # Python wrapper to unpack arguments
-    def compute(uc, vc, ut, ub, dt5, dt4, grid):​
-        ubke(uc, vc, grid.cosa, grid.rsina, ub, ut, dt5, dt4)
-
-This reduces the complexity of the code and consolidates operations on `ub` - it is now clear what the stencil is doing to `ub` everywhere.
+This reduces the complexity of the code and consolidates operations on `ub` - it is now immediately clear what the stencil is doing to `ub` everywhere.
 Model developers already understand the idea of offsets with the stencil notation of e.g. `uc[0, -1, 0]`, which is analogous to specifying offsets from an edge of the horizontal domain.
 
 All that needs to be changed in the frontend is adding the `region()` specifier, **so all existing GT4Py code will continue to work as before.**
 The new `region()` specifier accepts `local_origin` and `extent` that describe the horizontal iteration space in a way that describes the process-local iteration space, and can also represent the global space if the space is domain decomposed and computed by a set of processes.
 
-It may not be immediately obvious that this supports the notion of a global iteration space, but the object passed to `region()` is constructed by the user, and can embed details about the domain partitioning. It is the responsibility of this object to translate from a global index provided by the user to a local index used by gt4py.
+It may not be immediately obvious that this supports the notion of a global iteration space, but the object passed to `region()` is constructed by the user, and can embed details about the domain partitioning.
+It is the responsibility of this object to translate from a global index provided by the user to a local index used by gt4py.
 The processes that do not have an global iteration space index intersection with the provided regions simply skip this computation altogether.
 
 
@@ -119,17 +114,47 @@ Detailed Description
 The intent of this GDP is to a specify horizontal bounds inside the stencil in a similar fashion to how vertical intervals are specified.
 However, the fact that there are multiple dimensions in the horizontal, halos, and domain decomposition imply the feature needs to be more complex than a simple index range used for the vertical.
 
-As introduced above, we propose adding a new gtscript `region()` specifier that applies the stencil on a region of the space when a non-zero intersection with the global region specified occurs.
+As introduced above, we propose adding a new gtscript `region()` specifier that specializes the stencil on a region of the space when a non-zero intersection with the global region occurs.
 The idea behind using the region objects is that they can incorporate both the iteration space a process sees and the global partitioning that an application must handle, all while hiding the complexity at the stencil level for model developers.
 In this proposal, the application remains in control of the partitioning data so **the partitioner is entirely transparent to both GT4Py and its backend.**
 
-To explain how this works, consider part of the example above with a domain of size N by N by K points, decomposed by three processes using vertical strips of the domain:
+
+Specification Options
++++++++++++++++++++++
+
+An issue we faced when designing the iteration space featiure is that the stages (`with interval()`) are, by the execution model specification, free to be re-ordered by the runtime.
+We propose adding the `region()` to **either** (1) the multistage, in which case the execution order is specified by GridTool's execution model **or** (2) within a stage.
+We plan to implement these in order, first finishing an implementation of (1) before attempting the second.
+If we agree to try (2) the example would look like:
+
+.. code-block:: python
+
+    @gtscript.stencil(backend=backend_type)
+    def stencil(uc: FIELD_TYPE, vc: FIELD_TYPE, cosa: FIELD_TYPE, rsina: FIELD_TYPE, ut: FIELD_TYPE, ub: FIELD_TYPE, dt5: float, dt4: float):
+        with computation(PARALLEL), interval(...):
+            ub = dt5 * (uc[0, -1, 0] + uc - (vc[-1, 0, 0] + vc) * cosa) * rsina
+            with region(WestEdge(0, 1), EastEdge(0, 1)):
+                ub = dt5 * (ut[0, -1, 0] + ut)
+            with region(SouthEdge(0, 1), NorthEdge(0, 1)):
+                ub = dt4 * (-ut[0, -2, 0] + 3.0 * (ut[0, -1, 0] + ut) - ut[0, 1, 0])
+
+This creates a switch-like stage where the execution at the point choses one of these options.
+The first line(s), or the lines ouside a `with` block, specify the default operation, and specializations are inside the blocks.
+An ambiguity arises when the same point is represented in multiple specializations, but that is easily cleared up by specifying that the **last** specialization is the one that takes precedence.
+The reason for choosing this option is that performance (especially in the CUDA backend) is retained, even without multistage fusion, since the backend does not see multiple multistages.
+However, this has the drawback that additional parsing is needed.
+
+
+Relation to Global Iteration Space
+++++++++++++++++++++++++++++++++++
+
+To explain how the specification covers the domain decomposition case, consider part of the example above with a domain of size N by N by K points, decomposed by three processes using vertical strips of the domain:
 
 .. math:: \mathrm{proc}\, 0: [0,n) \times [0,N) \times [0,K),\quad \mathrm{proc}\, 1: [n,2n) \times [0,N) \times [0,K),\quad \mathrm{proc}\, 2: [2n,N) \times [0,N) \times [0,K).
 
 .. code-block:: python
 
-    with region(WestEdge(0, 1), EastEdge(0, 1)), interval(...):
+    with region(WestEdge(0, 1), EastEdge(0, 1)):
 
 This part of the example neatly indicates that it is intended to be run on both the east and west edges of horizontal plane for each `k`, with an index strip `1` wide.
 The construction and evaluation of these application-specific objects, `WestEdge(0,1)` and `EastEdge(0,1)`, are done before code generation, and can call into user-provided code.
@@ -153,7 +178,6 @@ The process would see:
 .. code-block:: python
 
     only proc:    ((local_origin=(0, 0), extent=(1, N)), (local_origin=(N-1, 0), extent=(1, N)))
-
 
 
 Compilation-Time Evaluation
