--- a/docs/GDPs/gdp-0002.rst
+++ b/docs/GDPs/gdp-0002.rst
@@ -256,6 +256,7 @@ The implementation on the GT4Py side should be relatively light. We will need to
 2. add the reduced iteration space to the `internal IR`_
 3. ensure backends parse this information correctly
 4. add a few corresponding tests for the feature
+5. add a demo with boundary conditions
 
 .. _IRMaker: https://github.com/GridTools/gt4py/blob/master/src/gt4py/frontend/gtscript_frontend.py#L454
 .. _internal IR: https://github.com/GridTools/gt4py/blob/master/src/gt4py/ir/nodes.py
