--- a/docs/user/next/workshop/exercises/1_simple_addition.ipynb
+++ b/docs/user/next/workshop/exercises/1_simple_addition.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addition(): ...  # TODO fix this cell"
+    "def addition(): ...  # EXERCISE: fix this cell"
    ]
   },
   {
