--- a/docs/user/next/workshop/exercises/3_gradient_exercise.ipynb
+++ b/docs/user/next/workshop/exercises/3_gradient_exercise.ipynb
@@ -72,7 +72,7 @@
     "    A: gtx.Field[Dims[C], float],\n",
     "    edge_orientation: gtx.Field[Dims[C, C2EDim], float],\n",
     ") -> gtx.tuple[gtx.Field[Dims[C], float], gtx.Field[Dims[C], float]]:\n",
-    "    # TODO: fix components of gradient\n",
+    "    # TODO(): fix components of gradient\n",
     "    f_x = A\n",
     "    f_y = A\n",
     "    return f_x, f_y"
