--- a/docs/user/next/workshop/exercises/4_curl_exercise.ipynb
+++ b/docs/user/next/workshop/exercises/4_curl_exercise.ipynb
@@ -94,7 +94,7 @@
     "    dualA: gtx.Field[Dims[V], float],\n",
     "    edge_orientation: gtx.Field[Dims[V, V2EDim], float],\n",
     ") -> gtx.Field[Dims[V], float]:\n",
-    "    # TODO: fix curl\n",
+    "    # TODO(): fix curl\n",
     "    uv_curl = dualA\n",
     "\n",
     "    return uv_curl"
