--- a/docs/user/next/workshop/exercises/6_where_domain.ipynb
+++ b/docs/user/next/workshop/exercises/6_where_domain.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "80cbe9d5",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "# TODO implement the field_operator\n",
+    "# EXERCISE: implement the field_operator\n",
     "\n",
     "\n",
     "@gtx.program(backend=backend)\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ebe2cd9d",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
     "@gtx.program(backend=backend)\n",
     "def program_domain(\n",
     "    a: gtx.Field[Dims[K], float], b: gtx.Field[Dims[K], float]\n",
-    "): ...  # TODO write the call to fieldop_domain"
+    "): ...  # EXERCISE: write the call to fieldop_domain"
    ]
   },
   {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cac80fbb",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
    "source": [
     "@gtx.field_operator\n",
     "def fieldop_domain_where(a: gtx.Field[Dims[K], float]) -> gtx.Field[Dims[K], float]:\n",
-    "    return  # TODO\n",
+    "    return  # ...\n",
     "\n",
     "\n",
     "@gtx.program(backend=backend)\n",
