--- a/docs/user/next/workshop/exercises/7_scan_operator.ipynb
+++ b/docs/user/next/workshop/exercises/7_scan_operator.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "69bf6022",
    "metadata": {},
    "outputs": [
@@ -182,18 +182,18 @@
     "    sedimentaion_constant = 0.05\n",
     "\n",
     "    # unpack state of previous iteration\n",
-    "    # TODO\n",
+    "    # ...\n",
     "\n",
     "    # Autoconversion: Cloud Drops -> Rain Drops\n",
-    "    # TODO\n",
+    "    # ...\n",
     "\n",
     "    ## Add sedimentation flux from level above\n",
-    "    # TODO\n",
+    "    # ...\n",
     "\n",
     "    # Remove mass due to sedimentation flux\n",
-    "    # TODO\n",
+    "    # ...\n",
     "\n",
-    "    return  # TODO"
+    "    return  # ..."
    ]
   },
   {
